tests/valid/boolean_operators/precedence_2.rs
/*
return: 0
*/

main(): i32 {
    return (1 || 0) && 0;
}