tests/invalid/boolean_operators/missing_semicolon.rs
/*
fail: 1
*/

main(): i32 {
    return 1 || 2
}